# practicals

CPPStaticLibs/: CMakeLists.txt  cpp_util.h
CPPStaticLibs/include/: shared-utils.h
Cryptography/CaesarCipher/CPP/: CaesarCipher.cbp  CaesarCipher.depend  CaesarCipher.layout  main.cpp
Cryptography/CaesarCipher/CaesarCipherCPP/: CMakeLists.txt  main.cpp
Cryptography/CaesarCipher/CaesarCipherCPP/cmake/: FindCPPStaticLibs.cmake
